# server

./: Cargo.toml  README.md  통신규칙.txt
client/: Cargo.toml
client/src/: main.rs
clinet/: Cargo.toml
clinet/src/: build.rs  lib.rs  main.rs
clinet/src/saves/: aaaa.rs  aaab.rs  aaac.rs
connect-lib/: Cargo.toml
connect-lib/src/: lib.rs
libCode/: Cargo.toml
libCode/src/: lib.rs
lib_code/: Cargo.toml
lib_code/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/saves/: aaaa.rs
