[package]
name = "libCode"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["sync", "socket2", "net", "io-util"]}
uuid = { version = "1.16.0", features = ["v4"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
dashmap = "6.1.0"